--- a/style.css
+++ b/style.css
@@ -96,7 +96,6 @@ div {
     animation-name: flip;
     animation-duration: 4s;
     animation-iteration-count: infinite;
-    animation-timing-function: linear;
   }
 
   @keyframes flip {
@@ -104,9 +103,9 @@ div {
         transform: translateX(200px);
     }
     50% {
-        transform: translateY(-200px) translateX(200px);
+        transform: translateY(-200px) translateX(200px) rotateX(180deg);
     }
     75% {
-        transform: translateX(200px)
+        transform: translateX(200px);
     }
   }
